<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seguros.SeguroCartaoActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/rosa"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_clear"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:srcCompat="@drawable/ic_clear" />

    <ImageView
        android:id="@+id/iv_seguro_cartao"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mensagem_um"
        app:layout_constraintEnd_toStartOf="@+id/tv_nao_preocupe"
        app:layout_constraintTop_toTopOf="@+id/tv_nao_preocupe"
        app:srcCompat="@drawable/ic_seguro_cartao_branco" />

    <TextView
        android:id="@+id/tv_nao_preocupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-16dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/tv_frase_um_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic_clear" />

    <TextView
        android:id="@+id/tv_mensagem_um"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/tv_frase_dois_header"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/tv_nao_preocupe"
        app:layout_constraintTop_toBottomOf="@+id/tv_nao_preocupe" />

    <TextView
        android:id="@+id/tv_mensagem_dois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/robotolight"
        android:text="@string/tv_apresentacao_mais_protegido"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_mensagem_um"
        app:layout_constraintStart_toStartOf="@+id/tv_mensagem_um"
        app:layout_constraintTop_toBottomOf="@+id/tv_cartao_protegido" />

    <TextView
        android:id="@+id/tv_cartao_protegido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/tv_cartao_protegido"
        android:textColor="@color/rosa"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/tv_para_voce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/robotolight"
        android:text="@string/tv_planos_indicados_seguro_cartao"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_cartao_protegido"
        app:layout_constraintTop_toBottomOf="@+id/tv_mensagem_dois" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_para_voce" />

    <TextView
        android:id="@+id/tv_plano_standard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/tv_plano_standard"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1" />

    <TextView
        android:id="@+id/tv_valor_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/tv_valor_standard"
        android:textColor="@color/rosa"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_plano_standard"
        app:layout_constraintTop_toBottomOf="@+id/tv_plano_standard" />

    <CheckBox
        android:id="@+id/cb_standard"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic__arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/tv_plano_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_plano_standard" />

    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_valor_standard" />

    <TextView
        android:id="@+id/tv_plano_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/tv_plano_plus"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2" />

    <TextView
        android:id="@+id/tv_valor_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/tv_valor_plus"
        android:textColor="@color/rosa"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_plano_plus"
        app:layout_constraintTop_toBottomOf="@+id/tv_plano_plus" />

    <CheckBox
        android:id="@+id/cb_plus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic__arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/tv_plano_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_plano_plus" />

    <View
        android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_valor_plus" />

    <TextView
        android:id="@+id/tv_plano_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/tv_plano_premium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_3" />

    <TextView
        android:id="@+id/tv_valor_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoregular"
        android:text="@string/tv_valor_premium"
        android:textColor="@color/rosa"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_plano_premium"
        app:layout_constraintTop_toBottomOf="@+id/tv_plano_premium" />

    <CheckBox
        android:id="@+id/cb_premium"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic__arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/tv_plano_premium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_plano_premium" />

    <Button
        android:id="@+id/btn_contratar_seguro_cartao"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_buttom"
        android:text="@string/btn_contratar_seguro_cartao"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>